# Emerald

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
emerald/: __init__.py  cli.py
emerald/adapters/: __init__.py  codeql.py  llm.py  registry.py  scanners.yaml
emerald/app/: dashboard.py
emerald/core/: __init__.py  benchmark.py  cache.py  models.py  normalize.py  runner.py  score.py  store.py
emerald/corpus/: corpus.yaml
emerald/corpus/ground_truth/: dvna.yaml  dvpwa.yaml  nodegoat.yaml  pygoat.yaml
scanners/: example-scanner.yaml
tests/: test_normalize.py  test_registry_cache_store.py  test_runner.py  test_score.py
