[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "emerald-harness"
version = "0.1.0"
description = "Orchestrated, vendor-neutral testing harness for code scanners and LLM models."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Keyur" }]
keywords = ["sast", "security", "benchmark", "scanner", "harness", "llm"]
dependencies = ["pyyaml>=6"]

[project.optional-dependencies]
llm = ["anthropic>=0.40", "openai>=1.40", "google-genai>=0.3"]
dashboard = ["streamlit>=1.40", "pandas>=2"]
dev = ["pytest>=8"]

[project.scripts]
emerald = "emerald.cli:main"

[tool.setuptools.packages.find]
include = ["emerald*"]

[tool.setuptools.package-data]
emerald = ["adapters/*.yaml", "corpus/*.yaml", "corpus/ground_truth/*.yaml"]
